Wed Sep  2 10:58:01 1998  Martin Mares  <mj@albireo.ucw.cz>

	* setpci.c (pread): Recognize glibc 1.99 numbered as 2.0 on the PPC.
	(thanks to Geert Uytterhoeven for finding this out)

Fri Jul 17 10:43:30 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_verbose): Print subsystem ID using the new resolver.
	(show_machine): Print subsystem ID.

	* names.c: New name resolution engine supporting subsystem IDs.

	* Released as version 1.07.

Wed Jul 15 15:37:21 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_htype2 etc.): Displaying of CardBus headers.
	(show_bases): Honor the `cnt' argument.
	(grow_tree): Parse CardBus headers in tree mode as well.

	* pci.h: Updated CardBus header field description. I still don't
	have the CardBus standard available, but OZ6832 specs contain
	full description of all header fields supported by the chip.

Tue Jun  9 22:53:59 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.06.

	* names.c (parse_name_list): Killed an unused variable.

	* setpci.c (pread, pwrite): Define SYS_(pread|pwrite) as __NR_\1
	if they are not defined by glibc (needed for glibc built on older
	kernels). Ugly.

	* setpci.c (exec_op): Fixed error messages. Thanks, Steve!

Mon Jun  8 10:59:22 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.05.

	* setpci.c: Problems with pread()/pwrite() with glibc on Alpha
	should be gone. Again thanks to Steve for bug report.

	* filter.c (filter_parse_slot): Fixed ":x" type filters.

	* pci.ids: Killed duplicate entry. Thanks to Stephen Williams
	<steve@icarus.com> for reporting this.

Sun Jun  7 19:27:51 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (main), setpci.c (main): Implemented "--version".

	* Released as 1.04.

	* pciutils.h (PCIUTILS_VERSION): Added version string.

	* filter.c, names.c: Extraneous #include <linux/pci.h> removed.
	Thanks to Geert Uytterhoeven <Geert.Uytterhoeven@cs.kuleuven.ac.be>
	for bug report.
